Parse command line args for a directive like "-module 2" which will set that as the startup module (0-based indices)
# 0.00.90 (55254) Aug 15, 2011
Micro tab: Increased radius within which particles can jump on to existing crystals, which fixes many problems in crystallization, including large or unbalanced concentrations
Micro tab: Made it so that a solute is saturated if either constituent is saturated rather than both
Micro tab: Changed crystal sizes and limit amounts to give the user 2 crystals and 1.99 mol/L max concentration by formula ratio by default
# 0.00.89 (55249) Aug 15, 2011
Micro tab: Changed crystal sizes and limit amounts to default to 1.00 mol/L max concentration
# 0.00.88 (55217) Aug 15, 2011
Micro tab: Added new images for micro sugar and salt shakers
Micro tab: Factored out SoluteConstituent
Micro tab: Increased the random walk component when particles flowing to the drain
Micro tab: Moved the drain faucet input point into the solution instead of being past the exterior of the beaker
Micro tab: For "no dissolving while evaporating" workaround, only apply the workaround if concentration is above the saturation point.  This will allow newly dropped crystals to dissolve instead of staying crystallized.
Micro tab: Balance crystal ion ratios (according to formula ratio) when growing crystals to help maintain the correct concentration ratio
Micro tab: If there is no water, move particles quickly toward each other to form crystals since there should be no free ions
Micro tab: Made button read "remove solute" if one solute type, "remove solutes" if two solute types
Fixed: water not centered on faucets
Micro tab: Fixed: particles don't flow out of the output faucet at the right location
Micro tab: Fixed: particles don't flow to the right location on the output faucet
# 0.00.87 (55106) Aug 12, 2011
Added pipe for top faucet
Switched to lighter version of faucet images
Added glucose
Fixed z-ordering for sucrose
# 0.00.86 (55030) Aug 10, 2011